<package>
  <name>strands_desktop</name>
  <version>0.0.2</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/strands-project/metapackages</url>
  <url type="bugtracker">https://github.com/strands-project/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>strands_morse</run_depend>
  <run_depend>strands_navigation</run_depend>
  <run_depend>morse-blender-bundle</run_depend>

  <run_depend>strands_ui</run_depend>
  <run_depend>strands_perception_people</run_depend>
  <run_depend>scitos_common</run_depend>
  <run_depend>strands_webtools</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
