<?xml version="1.0"?>
<package>
  <name>strands_extras</name>
  <version>0.0.14</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/strands-project/metapackages</url>
  <url type="bugtracker">https://github.com/strands-project/metapackages/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>strands_qsr_lib</run_depend>
  <run_depend>v4r_ros_wrappers</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
