<package>
  <name>strands_robot</name>
  <version>0.0.1</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/strands-project/metapackages</url>
  <url type="bugtracker">https://github.com/strands-project/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>scitos_mira</run_depend>
  <run_depend>strands_navigation</run_depend>

  <run_depend>strands-ui</run_depend>
  <run_depend>strands-perception-people</run_depend>
  <run_depend>scitos-common</run_depend>
  <run_depend>strands-webtools</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
