<package>
  <name>strands_robot</name>
  <version>0.0.4</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/strands-project/metapackages</url>
  <url type="bugtracker">https://github.com/strands-project/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>scitos_mira</run_depend>

  <run_depend>scitos_drivers</run_depend>
  <run_depend>flir_pantilt_d46</run_depend>
  <run_depend>sicks300</run_depend>
  <run_depend>scitos_common</run_depend>
  <run_depend>scitos_description</run_depend>
  <run_depend>scitos_2d_navigation</run_depend>
  <run_depend>scitos_apps</run_depend>

  <run_depend>strands_apps</run_depend>
  <run_depend>strands_navigation</run_depend>
  <run_depend>strands_ui</run_depend>
  <run_depend>strands_perception_people</run_depend>
  <run_depend>strands_hri</run_depend>
  <run_depend>strands_webtools</run_depend>
  <run_depend>strands_social</run_depend>
  <run_depend>task_executor</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
